# VRP-GA

./: CMakeLists.txt
data/: A-n32-k5.vrp  A-n33-k5.vrp  A-n80-k10.vrp
src/: main.cpp
